--- a/document-structure/cart/task.html
+++ b/document-structure/cart/task.html
@@ -19,7 +19,7 @@
         </h1>
     </header>
     <!-- корзина -->
-    <div class="cart">
+    <div class="cart non-cart">
         <div class="cart__title">Корзина</div>
         <div class="cart__products">
             <!-- разметка добавленного в корзину товара -->
@@ -27,6 +27,11 @@
                 <img class="cart__product-image" src="image.png">
                 <div class="cart__product-count">20</div>
             </div>-->
+        </div>
+        <div class="clear__position">
+            <div class="clear__cart">
+                Очистить корзину
+            </div>
         </div>
     </div>
     <!-- список товаров -->
@@ -55,6 +60,9 @@
                     <div class="product__add">
                         Добавить в корзину
                     </div>
+                    <div class="product__remove">
+                        Удалить из корзины
+                    </div>
                 </div>
             </div>
         </div>
@@ -81,6 +89,9 @@
                     </div>
                     <div class="product__add">
                         Добавить в корзину
+                    </div>
+                    <div class="product__remove">
+                        Удалить из корзины
                     </div>
                 </div>
             </div>
@@ -109,6 +120,9 @@
                     <div class="product__add">
                         Добавить в корзину
                     </div>
+                    <div class="product__remove">
+                        Удалить из корзины
+                    </div>
                 </div>
             </div>
         </div>
@@ -135,6 +149,9 @@
                     </div>
                     <div class="product__add">
                         Добавить в корзину
+                    </div>
+                    <div class="product__remove">
+                        Удалить из корзины
                     </div>
                 </div>
             </div>
